Notifications page visibility bug

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -120,5 +120,5 @@ h1 {
 }
 
 #notifications_modal{
-    display: block;
+    display: none;
 }
